--- a/.github/workflows/docker-image-publish.yml
+++ b/.github/workflows/docker-image-publish.yml
@@ -2,7 +2,7 @@ name: Publish Docker image
 on:
   release:
     types: [published]
-    
+
 jobs:
   push_to_registry:
     name: Push Docker image to GitHub Packages
@@ -18,12 +18,14 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.API_TOKEN_GITHUB }}
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.API_TOKEN_GITHUB }}
-          registry: docker.pkg.github.com
-          repository: manasky/lorem-server/lorem-server-image
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
