fix: add image registry domain

--- a/.github/workflows/docker-image-publish.yml
+++ b/.github/workflows/docker-image-publish.yml
@@ -14,7 +14,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: manasky/lorem-server
+          images: ghcr.io/manasky/lorem-server
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
